--- a/Flexicon-HTML-CSS.css
+++ b/Flexicon-HTML-CSS.css
@@ -35,7 +35,7 @@ h1 {
     font-family: Inter; 
     font-weight: 900; 
     color: #004990; 
-    border-bottom: 2px solid #004990; /* Exact Flexicon Blue */
+    border-bottom: 2px solid #004990 !important; /* Exact Flexicon Blue */
     padding-bottom: 10px; /* Slight increase to match visual weight */
     text-align: center; 
 }
@@ -44,7 +44,7 @@ h2 {
     font-family: Inter; 
     font-weight: 700; 
     color: #004990;
-    border-bottom: 2px solid #004990; 
+    border-bottom: 2px solid #004990 !important; /* Exact Flexicon Blue */
     padding-bottom: 20px; /* Increased to 20px to center text */
     margin-top: 20px;    /* Decreased to 20px to balance space from <hr> */
     margin-bottom: 20px;
