--- a/Flexicon-HTML-CSS.css
+++ b/Flexicon-HTML-CSS.css
@@ -137,7 +137,7 @@ pre {
 }
 
 code {
-    font-family: 'SF Mono', 'Courier New', monospace !important;
+    font-family: 'SF Mono', 'Consolas', monospace !important;
     font-size: 0.9em !important;
     color: #333 !important;
 }
